# servermanager

./: .env.example  LICENSE  README.md  pyproject.toml
src/: __main__.py  core.py
src/cogs/: error.py  ready.py
